--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -6,3 +6,4 @@ project ("QTC++_Tutorials")
 add_subdirectory(01_QtSetup)
 add_subdirectory(02_QLabel)
 add_subdirectory(03_QLineEdit)
+add_subdirectory(04_QPushButton)
