--- a/08_TextEditor/CmakeLists.txt
+++ b/08_TextEditor/CmakeLists.txt
@@ -1,27 +1,24 @@
 cmake_minimum_required(VERSION 3.9)
 
-project ("04_QPushButton")
+project ("08_TextEditor")
 
 # list the header files
 set(HEADER_FILES
-
+	Mainwindow.h
 )
 
 # list the source files
 set(SOURCE_FILES
 	main.cpp
+	Mainwindow.cpp
 )
 
 
 # link with qt5
-find_package(Qt5Core    CONFIG REQUIRED)
 find_package(Qt5Widgets CONFIG REQUIRED)
-find_package(Qt5Gui     CONFIG REQUIRED)
-
-qt5_wrap_cpp(HEADER_MOC ${HEADER_FILES})
 
 # add library target
-add_executable(04_QPushButton
+add_executable(08_TextEditor
 	${HEADER_FILES}
 	${SOURCE_FILES}
 	${HEADER_MOC}
@@ -29,24 +26,21 @@ add_executable(04_QPushButton
 )
 
 set(QT_LIBS
-	Qt5::Core
-	Qt5::Gui
 	Qt5::Widgets
 )
 
-target_link_libraries(04_QPushButton
+target_link_libraries(08_TextEditor
 	PUBLIC
 		${QT_LIBS}
 )
 
-
 # Windows specfic flags to enable W variations of winapi
 if(WIN32)
-	target_compile_definitions(04_QPushButton
+	target_compile_definitions(08_TextEditor
 		PRIVATE
 			OS_WINDOWS=1
 	)
-	target_compile_options(04_QPushButton
+	target_compile_options(08_TextEditor
 		PRIVATE
 			/WX
 	)
@@ -54,7 +48,7 @@ endif()
 
 # enable C++17
 # disable any compiler specifc extensions
-target_compile_features(04_QPushButton PUBLIC cxx_std_17)
-set_target_properties(04_QPushButton PROPERTIES
+target_compile_features(08_TextEditor PUBLIC cxx_std_17)
+set_target_properties(08_TextEditor PROPERTIES
 	CXX_EXTENSIONS OFF
 )
