--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(05_QLayouts)
 add_subdirectory(06_QLayouts)
 add_subdirectory(07_QLayouts)
 add_subdirectory(08_TextEditor)
+add_subdirectory(09_TextEditor)
