--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -12,3 +12,4 @@ add_subdirectory(06_QLayouts)
 add_subdirectory(07_QLayouts)
 add_subdirectory(08_TextEditor)
 add_subdirectory(09_TextEditor)
+add_subdirectory(10_TextEditor)
