--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(07_QLayouts)
 add_subdirectory(08_TextEditor)
 add_subdirectory(09_TextEditor)
 add_subdirectory(10_TextEditor)
+add_subdirectory(11_Qt_opengl)
